<resources>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="app_name">Melio</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_header">This header is invalid</string>
    <string name="error_invalid_body">This body is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_rooms">RoomsActivity</string>

    <!-- Quiz Strings -->
    <string name="promptText">In the last 6 months, have you experienced any of the following?</string>
    <string name="constantly">Constantly</string>
    <string name="often">Often</string>
    <string name="sometimes">Sometimes</string>
    <string name="a_few_times">A few times</string>
    <string name="never">Never</string>
    <string name="next">Next</string>

    <string name="chat">Chat</string>
    <string name="room">Rooms</string>

    <string name="MELIO">MELIO(RATE): To make better</string>

</resources>
